--- a/Read/ReadAndroid/05.智能硬件/08.M1卡和CPU卡学习.md
+++ b/Read/ReadAndroid/05.智能硬件/08.M1卡和CPU卡学习.md
@@ -13,7 +13,11 @@
     - 3.2 M1卡基础概念
     - 3.3 M1卡片操作步骤
     - 3.4 M1卡通信原理
-- 
+- 04.IC卡开发设计
+    - 4.1 总体设计思路
+    - 4.2 卡操作流程设计
+    - 4.3 接口设计
+    - 4.4
 
 
 
