--- a/Read/ReadShareWiki/03.故事历史/01.生活哲理小故事.md
+++ b/Read/ReadShareWiki/03.故事历史/01.生活哲理小故事.md
@@ -3,9 +3,7 @@
 - 02.人穷不省三种钱
 - 03.没钱不串三人门
 - 05.世间需用三类爱
-- 06.知道人穷断六亲吗
-- 07.
-
+- 06.知道人穷断六亲
 
 
 
@@ -33,10 +31,14 @@
 - **这是一句俗语**
     - 一些谚语或俗语话语虽然简单直白，却凝聚着人民群众千百年来的智慧精华，在历史的长河中代代相传，对我们有很深的借鉴意义。
 - **人穷不省三种钱**
-    - 是说一个人无论处于怎样的困境，有三种钱不能省：礼钱、饭钱、表钱，具体来说：
-    - 第一，礼钱，是指人情往来的各种礼仪钱财，是一个人立足社会的根本。人之所以为人，是因为人是社会动物，存于世便不可避免的和周围的人有各种往来，礼钱是这种往来最直接的一种表现。礼金是我们农村人当中不可缺少的，只要别人邀请你了，人不到，礼金是要到的，在穷也不会不给礼金。不管是亲戚或者朋友也好，帮助或者送礼都是礼尚往来的，当然数额可以有多有少，但仪式必不可少。
-    - 第二，饭钱，表面看来，是因为吃饭是一个人最基本的生活需求，人活着，填饱肚子必不可少，实际上，这饭钱，也包括不能随便蹭饭，以及和别人一起吃饭时，不能太过抠门，必要的饭钱还是要付的。
-    - 第三，表钱，表在这里指仪表，是指一个人要保持基本的仪表整洁，要有几身得体的衣服，能够应对不同场合，给人留下一个好的印象，最差也要有遮体之衣，做到干净整洁。这不仅是简单的对美的追求，更是一种积极向上的生活态度，和对自己的尊重和关怀。
+    - 是说一个人无论处于怎样的困境，有三种钱不能省：礼钱、饭钱、表钱，具体来说是这样的。
+- 第一，礼钱
+    - 是指人情往来的各种礼仪钱财，是一个人立足社会的根本。人之所以为人，是因为人是社会动物，存于世便不可避免的和周围的人有各种往来，礼钱是这种往来最直接的一种表现。
+    - 礼金是我们农村人当中不可缺少的，只要别人邀请你了，人不到，礼金是要到的，在穷也不会不给礼金。不管是亲戚或者朋友也好，帮助或者送礼都是礼尚往来的，当然数额可以有多有少，但仪式必不可少。
+- 第二，饭钱
+    - 表面看来，是因为吃饭是一个人最基本的生活需求，人活着，填饱肚子必不可少，实际上，这饭钱，也包括不能随便蹭饭，以及和别人一起吃饭时，不能太过抠门，必要的饭钱还是要付的。
+- 第三，表钱
+    - 表在这里指仪表，是指一个人要保持基本的仪表整洁，要有几身得体的衣服，能够应对不同场合，给人留下一个好的印象，最差也要有遮体之衣，做到干净整洁。这不仅是简单的对美的追求，更是一种积极向上的生活态度，和对自己的尊重和关怀。
 
 
 
@@ -60,7 +62,7 @@
 
 
 
-### 06.知道人穷断六亲吗
+### 06.知道人穷断六亲
 - **“六亲”指哪些人？**
     - 第一种：父子、兄弟、从父兄弟、从祖兄弟、从曾祖兄弟、同族兄弟。
     - 第二种：指父、母、兄、弟、妻、子女。
@@ -69,9 +71,13 @@
 - **穷在路边无人问，富在深山有远亲**
     - 现实是这样，你有钱有势，很多亲戚都会巴结你，讨好你。如果你很穷，无权无势，就算你住在大路边，很多亲戚也不会到你家。
 - **农村老话“人穷断六亲”与“穷人不走亲”有异曲同之之妙**
-    - 有的穷人，人穷志坚，不想被富亲戚认为找他们是希望富亲戚接济自己，是有求于富亲戚，所以穷人从不主动走亲访友;有的会因为一台富亲戚来往，人情往来一把锯，凑分子钱时不如别人感到难为情，不好意思与富裕的亲戚来往;有的则因自卑心理作祟，总觉得富亲戚会看不起自己，害怕遭人白眼，又总是以为自己差劲，比不上人家，怕寒碜，即使富亲戚找上门来，见了面也是问一句答一句，有的甚至很少搭话，总是坐在角落里，不吭一声，这样的情形让人觉得还不如不见面的好，于是长期不愿走动，互不往来使亲戚间的情感越来越淡，渐渐也就淡忘了这份亲戚情。
+    - 有的穷人，人穷志坚，不想被富亲戚认为找他们是希望富亲戚接济自己，是有求于富亲戚，所以穷人从不主动走亲访友;
+    - 有的会因为一台富亲戚来往，人情往来一把锯，凑分子钱时不如别人感到难为情，不好意思与富裕的亲戚来往;
+    - 有的则因自卑心理作祟，总觉得富亲戚会看不起自己，害怕遭人白眼，又总是以为自己差劲，比不上人家，怕寒碜，即使富亲戚找上门来，见了面也是问一句答一句，有的甚至很少搭话，总是坐在角落里，不吭一声，这样的情形让人觉得还不如不见面的好，于是长期不愿走动，互不往来使亲戚间的情感越来越淡，渐渐也就淡忘了这份亲戚情。
 - **人富人穷不断六亲**
-    - 当我们贫穷时，我们自己不要看不起自己，不要因为一时穷，而自卑，总认为亲戚看不起你，从而不再同亲人交往，这种行为就是你主动断了亲戚。实际上，毕竟血溶于水，关键时刻有时还得靠亲人的帮助。如果我们一时不顺，我们一定要放低姿态，虚心向亲人学习，争取努力成功！同时，一旦我们成功了，千万不要看不起亲戚，要尽自己能力帮助比自己差些的亲戚！真正做到“人富人穷不断六亲”。
+    - 当我们贫穷时，我们自己不要看不起自己，不要因为一时穷，而自卑，总认为亲戚看不起你，从而不再同亲人交往，这种行为就是你主动断了亲戚。
+    - 实际上，毕竟血溶于水，关键时刻有时还得靠亲人的帮助。如果我们一时不顺，我们一定要放低姿态，虚心向亲人学习，争取努力成功！
+    - 同时，一旦我们成功了，千万不要看不起亲戚，要尽自己能力帮助比自己差些的亲戚！真正做到“人富人穷不断六亲”。
 
 
 
