--- a/Read/ReadAndroid/05.智能硬件/08.M1卡和CPU卡学习.md
+++ b/Read/ReadAndroid/05.智能硬件/08.M1卡和CPU卡学习.md
@@ -17,7 +17,10 @@
     - 4.1 总体设计思路
     - 4.2 卡操作流程设计
     - 4.3 接口设计
-    - 4.4
+- 05.轮询识别卡操作
+    - 5.1 读写卡分析
+    - 5.2 如何设计轮询方案
+    - 5.3 轮询设计思路
 
 
 
@@ -208,7 +211,10 @@
 
 
 
-####  3.4 M1卡通信原理
+
+
+
+####  M1卡通信原理
 - Mifare 1卡（M1卡、IC卡）读写操作及工作原理整理
   - https://blog.csdn.net/qq_32348883/article/details/126603790
 - M1卡介绍
