--- a/Read/ReadBlogWiki/04.执行策略/16.闭环思维方法论.md
+++ b/Read/ReadBlogWiki/04.执行策略/16.闭环思维方法论.md
@@ -19,10 +19,13 @@
 - 张三边说边从提包里拿出土豆，"我想这么便宜的土豆一定可以赚钱，根据我们以往的销量，40袋土豆在一个星期左右就可以全部卖掉。而且，咱们全部买下还可以再适当优惠，对比其他家性价比高，后期还可以建立长期合作。所以，我把具体方案制定了一下，要到了联系方式……"
 
 
+
 ### 02.你是故事中的谁
-- 这个故事可以看作是我们日常工作中的一个细节。我们真的都能买好土豆吗？每天都能买好吗次次都能买好吗？显然，如果我们不用心，就会很难做到。可见，即使再简单的工作也要用心，也能由此小事彰显做此事的人的大智慧。
+- 这个故事可以看作是我们日常工作中的一个细节。我们真的都能买好土豆吗？每天都能买好吗次次都能买好吗？
+- 显然，如果我们不用心，就会很难做到。可见，即使再简单的工作也要用心，也能由此小事彰显做此事的人的大智慧。
 - 如果你觉得工作没有太多的进展，那么你真的思考过工作真的用心去做了吗？工作是否做得到位？**如何让工作做得更好呢**？
-- 工作如果仅仅是有量的变化，而没有质的飞越，那么如何更够胜任更高职位的工作呢？**同样的一个工作，有的人可能仅仅只是做表面功夫，而有些人能够把工作的细节做得更好，站在领导的角度思考问题，把工作方方面面的问题考虑在内，做事情最终的结果自然也是领导希望看到的**。
+- 工作如果仅仅是有量的变化，而没有质的飞越，那么如何更够胜任更高职位的工作呢？
+- **同样的一个工作，有的人可能仅仅只是做表面功夫，而有些人能够把工作的细节做得更好，站在领导的角度思考问题，把工作方方面面的问题考虑在内，做事情最终的结果自然也是领导希望看到的**。
 
 
 
@@ -43,7 +46,8 @@
 
 
 ### 05.把事情做的更好
-- 要知道这个世界上没有完美的东西，你负责的系统和业务，总有不合理和可以改进的地方，这些“不合理”和“可改进”的地方，都是更高级别的怪物，打完后能够增加更多的经验值。识别出这些地方，并且给出解决方案，然后向主管提出，一次不行两次，多提几次，只要有一次落地了，这就是你的机会。
+- 要知道这个世界上没有完美的东西，你负责的系统和业务，总有不合理和可以改进的地方，这些“不合理”和“可改进”的地方，都是更高级别的怪物，打完后能够增加更多的经验值。
+- 识别出这些地方，并且给出解决方案，然后向主管提出，一次不行两次，多提几次，只要有一次落地了，这就是你的机会。
 - 重复代码太多，是否可以引入设计模式？系统性能一般，可否进行优化？版本开发质量不高，是否引入高效的单元测试和集成测试方案？目前的系统太庞大，是否可以通过重构和解耦改为3个系统？
 
 
