--- a/Read/ReadBlogWiki/04.执行策略/18.生命线分享游戏.md
+++ b/Read/ReadBlogWiki/04.执行策略/18.生命线分享游戏.md
@@ -22,13 +22,15 @@
 
 
 ### 03.用白纸记录事件
-- 第一步，准备一张白纸，在白纸上画一条横线，横线的最左边表示你的出生时间点，最后边表示现在。你可以用10-15分钟的时间，回忆你成长过程中让你印象深刻的事情，然后把这些事情按照时间顺序在横线上一一标注出来。
+- 第一步，准备一张白纸，在白纸上画一条横线，横线的最左边表示你的出生时间点，最后边表示现在。
+- 你可以用10-15分钟的时间，回忆你成长过程中让你印象深刻的事情，然后把这些事情按照时间顺序在横线上一一标注出来。
 - 注意，横线的上方标注对你有积极影响的事件，横线下方标注对你有消极影响的事件，离横线的距离远近，表示对你的影响程度。
 
 
 
 ### 04.标出事件要阐述
-- 对标注出的每一个事件，进行讲述。讲述的时候要尽量真实和完整，包含时间、地点、人物、情景、情节等要素。同时要尽可能深入到故事中的每一个细节，包括你当时是怎么想的，又是怎么做的，最终得到了什么样的结果，你对此又有什么感受等等。
+- 对标注出的每一个事件，进行讲述。讲述的时候要尽量真实和完整，包含时间、地点、人物、情景、情节等要素。
+- 同时要尽可能深入到故事中的每一个细节，包括你当时是怎么想的，又是怎么做的，最终得到了什么样的结果，你对此又有什么感受等等。
 
 
 
@@ -46,7 +48,8 @@
 
 ### 07.充分使用该游戏
 - 通过这样的生命线工具，你能够比较容易的借助故事挖掘出自己真正的特质，不论是正面的还是负面的。一方面，人的记忆具备美化功能，我们回忆中的那个自己，会比真实的自己更加优秀。
-- 故事一般都有因有果，当你深入讲述自己生命中的关键故事时，其实也在刨根问底寻找你成功或失败的根本原因。这是你的人生故事，最能反映出你的性格、兴趣、能力、价值观等等诸多特质。
+- 故事一般都有因有果，当你深入讲述自己生命中的关键故事时，其实也在刨根问底寻找你成功或失败的根本原因。
+- 这是你的人生故事，最能反映出你的性格、兴趣、能力、价值观等等诸多特质。
 - 生命线分享，其实就是另一种形式的人生复盘，是一个能帮助你拨开记忆迷雾，让你尽可能真实认知自己的工具。而如果你能够看到真实的自我，那你就有更大的机会成为你想要成为的人。
 - 如果你觉得这个方法对你有用，那你不妨把它作为一个常规项目，通过若干次人生复盘找到你的固有行为模式，总结出属于你的人生规律，为今后的行动提供参考和指引。
 
