--- a/Read/ReadBlogWiki/03.建立体系/01.信息过载怎么办.md
+++ b/Read/ReadBlogWiki/03.建立体系/01.信息过载怎么办.md
@@ -18,33 +18,59 @@
 
 
 ### 02.信息过载的现状
+#### 2.1 过载的情况描述
 - 信息时代，作为离信息距离最近的职业之一，程序员应该最能感受这个时代的信息洪流与知识迭代的速度有多快。
 - 信息数据量的高速增长，也带来了处理信息技术的快速发展，所以新技术层出不穷，而且现有的技术也开始在其深度和广度领域不断地开疆拓土。
-- 这样的发展状况说明了一个现实：我们没办法掌握这一切。别说“一切”，其实更符合实际的情况是，我们仅仅掌握了已有信息和知识领域中非常微小的一部分。
+- 这样的发展状况说明了一个现实：**我们没办法掌握这一切。别说“一切”，其实更符合实际的情况是，我们仅仅掌握了已有信息和知识领域中非常微小的一部分**。
 - 在信息大爆炸的时代，我们对信息越发敏锐，信息就越会主动吸引我们，让我们产生一种过载的感觉。
 
 
+#### 2.2 过载的行为表现
+- 那么大脑信息过载有什么表现呢？核心是信息消化不良！
+- 想要实现的事情实现不了，吸收的信息理解不了，想要表达的想法表达不出来。比如说跟人探讨问题，没有形成自己的见解！
+- 一刻不得闲，大家可不要理解成精力过剩，这种情况其实就是信息过载导致的不停探究。一直马不停蹄地忙碌，但有时候成效甚微！
+- 假性自闭：不和他人眼神交流，眼神无法聚焦，但明白他人在说什么………等不良状态，不要因为这些行为生气焦虑。
+
+
+
 ### 03.疲于奔命地学习
-- 在面对这股信息与知识的洪流时，有时我们会不自觉地就进入到了 “疲于奔命”模式中。因为每天感觉有太多的信息要处理，太多的知识想学习。计划表排得满满的，似乎每天没能完成当天的计划，就会产生焦虑感，造成了日复一日的 “疲于奔命” 状态。
+#### 3.1 陷入疲于奔命模式
+- 在面对这股信息与知识的洪流时，有时我们会不自觉地就进入到了 “疲于奔命”模式中。
+- **因为每天感觉有太多的信息要处理，太多的知识想学习。计划表排得满满的，似乎每天没能完成当天的计划，就会产生焦虑感，造成了日复一日的 “疲于奔命” 状态**。
 - 总是焦虑着完成更多，划掉 TODO List 上更多的事项，希望每日带着超额完成计划的充实与满足感入睡，最后这一切不过是一种疲于奔命带来的虚幻满足感。
+
+
+#### 3.2 如何治理疲于奔命
 - 所以，在感觉大脑处于 “过载” 的疲倦中时，别“疲于奔命”，别硬撑，最好的办法就是去小憩片刻。
-- 进入了疲于奔命状态，其实我们就在不断给大脑喂任务，且不停地切换大脑任务，让它永远处于繁忙甚至超频状态。这样每个任务的执行效率都会下降且效果也不佳，所以导致执行任务的时间反而延长了，这就给我们营造了一种“忙碌、充实而疲倦”的虚幻假象。
+- 进入了疲于奔命状态，其实我们就在不断给大脑喂任务，且不停地切换大脑任务，让它永远处于繁忙甚至超频状态。
+- 这样每个任务的执行效率都会下降且效果也不佳，所以导致执行任务的时间反而延长了，这就给我们营造了一种“忙碌、充实而疲倦”的虚幻假象。
 
 
 
 ### 04.心智模型去筛选
-- 面对大量的信息和知识，我们该如何应对？这可以从两个角度来考虑：信息和知识本身的价值？我需要怎样的信息和知识？
+#### 4.1 如何筛选信息
+- 面对大量的信息和知识，我们该如何应对？这可以从两个角度来考虑：**信息和知识本身的价值？我需要怎样的信息和知识**？
 - 第一点，信息和知识的价值是一个主观的判断，有一个客观点的因子是获取门槛。如果一个信息或知识随处可得，大家都能接触到，甚至变得很热门，那么其价值可能就不大。
 - 第二点，就提出了一个关于如何筛选信息和知识的问题。心理学上有一个 “心智模型” ：“心智模型” 是用于解释个体对现实世界中某事所运作的内在认知历程，它在有限的领域知识和有限的信息处理能力上，产生合理的解释。
-- 每个人都有这样的 “心智模型”，用来处理信息，解释行为，做出决策。不过只有少部分人会更理性地认知到这个模型的存在，而且不断通过吸收相关信息和知识来完善这个模型；更多的众人依赖的是所谓的 “感觉” 和 “直觉”。但实际上 “感觉” 和 “直觉” 也是 “心智模型” 产生的一种快捷方式，只是他们没有理性地认知到这一点。
+
+
+#### 4.2 心智模型的理解
+- 每个人都有这样的 “心智模型”，用来处理信息，解释行为，做出决策。不过只有少部分人会更理性地认知到这个模型的存在，而且不断通过吸收相关信息和知识来完善这个模型；更多的众人依赖的是所谓的 “感觉” 和 “直觉”。
+- 但实际上 “感觉” 和 “直觉” 也是 “心智模型” 产生的一种快捷方式，只是他们没有理性地认知到这一点。
 - “心智” 这两个字合在一起是一个意思，分开为 “心” 和 “智” 两个字又可以分别解释为：“心” 是你对需要的选择，从心出发；“智” 是对价值的判断，智力的匹配。
 
 
 
 ### 05.为应用去做和学
+#### 5.1 没目的学习是徒劳
 - 储备了信息，建立了知识，最终都是为了应用。囤积信息，学习知识，如果不能被应用在改变自己上，那还有什么意义？
-- 没有目的的学习是徒劳的，它仅仅是在我们的头脑中流过一遍，流过的痕迹很快又会被新的信息冲刷干净。不管我们拥有怎样的 “最强大脑”，在面对这股信息与知识洪流时，都几乎可忽略不计。
-- 做和学就要有选择和取舍，你得挑选那些真正值得做和学的东西去让大脑满负荷运转，但凡投入决心去做的事情，就需要百分百投入。这就是专注于少而精的东西，深入了解这些东西，进入到更深的层次上。深可以无止境，那到底多深才合适？
+- 没有目的的学习是徒劳的，它仅仅是在我们的头脑中流过一遍，流过的痕迹很快又会被新的信息冲刷干净。
+- 不管我们拥有怎样的 “最强大脑”，在面对这股信息与知识洪流时，都几乎可忽略不计。
+
+
+#### 5.2 学会取舍去做和学
+- 做和学就要有选择和取舍，你得挑选那些真正值得做和学的东西去让大脑满负荷运转，但凡投入决心去做的事情，就需要百分百投入。
+- 这就是专注于少而精的东西，深入了解这些东西，进入到更深的层次上。深可以无止境，那到底多深才合适？
 - 我的答案是：让你的内心对取得的效果感受到满意的深度层次上。它的反面是：但凡心存疑虑，不是那么确定要全力投入的事情，干脆就不做了。
 
 
