--- a/Read/ReadAndroid/07.库的设计/01.LeakCanary内存收集.md
+++ b/Read/ReadAndroid/07.库的设计/01.LeakCanary内存收集.md
@@ -1,7 +1,7 @@
 #### 目录介绍
 - 01.整体概述介绍
     - 1.1 项目背景
-    - 1.2 遇到问题
+    - 1.2 遇到问题说明
     - 1.3 设计目标
     - 1.4 产生收益
 - 02.开发设计思路
@@ -124,7 +124,7 @@
 - 如何标记一个对象，判断是否泄漏。
     - 为弱引用指定一个引用队列，当弱引用指向的对象被回收时，此弱引用就会被添加到这个队列中，我们可以通过判断这个队列中有没有这个弱引用，来判断该弱引用指向的对象是否被回收了。
 - 通过弱引用判断内存是否泄漏案例
-    ``` java
+    ```
     // 创建一个引用队列
     ReferenceQueue<Object> queue = new ReferenceQueue<>();
     
@@ -159,7 +159,7 @@
     }
     ```
 - 打印结果如下所示：
-    ``` java
+    ```
     这个弱引用是:java.lang.ref.WeakReference@6e0be858
     before
     after: java.lang.ref.WeakReference@6e0be858
