--- a/Read/ReadShareWiki/01.文学名著/01.钱钟书作品围城.md
+++ b/Read/ReadShareWiki/01.文学名著/01.钱钟书作品围城.md
@@ -1,5 +1,4 @@
 #### 目录介绍
-#### 目录介绍
 - 01.围城的中心思想
 - 02.新版的儒林外史
 - 03.故事之简单简介
@@ -26,9 +25,9 @@
 
 
 ### 02.新版的儒林外史
-- 《一代才子钱钟书》的作者汤晏，对钱老先生的《围城》有这样一段评价：“《围城》是描写知识分子最好的一部小说，可谓新《儒林外史》，但无论内容和技巧来说，《围城》较吴敬梓的《儒林外史》为佳。”
+- 有人对钱老先生的《围城》有这样一段评价：“《围城》是描写知识分子最好的一部小说，可谓新《儒林外史》，但无论内容和技巧来说，《围城》较吴敬梓的《儒林外史》为佳。”
 - 这段评价道出了很多人的心声。钱钟书老先生这部唯一的长篇小说，在文学界的确享有盛誉，颇具盛名，如此评价它的确够格。钱钟书以幽默诙谐的笔调以及形象生动的比喻，刻画了一批形象鲜明的旧时社会知识分子的模样，并用主人公“方鸿渐”的悲剧人生，向我们展现了“围城”式的人生困境。
-- 一提到“围城”，人们就会不由自主地想这句话：婚姻就像一座围城,围城外的人想进来,围城里的人想出去。
+- 一提到“围城”，人们就会不由自主地想这句话：婚姻就像一座围城，围城外的人想进来，围城里的人想出去。
 - 实际上，对主人公方鸿渐而言，他的事业、爱情和婚姻都成了他的“围城”。钱钟书老先生也曾说：“方鸿渐就是一直在围城里飞翔的鸟儿，始终无法落地，也始终无法飞出围城。于他而言，人生如此，事业也是如此。”
 
 
