--- a/Read/ReadShareWiki/01.文学名著/09.马尔科姆的异类.md
+++ b/Read/ReadShareWiki/01.文学名著/09.马尔科姆的异类.md
@@ -13,12 +13,15 @@
 
 ### 01.前沿简单的介绍
 - 马尔科姆-格拉德威尔的《异类》诠释了这样一个独特的观点：人类栖身其中的自然环境和社会环境对人的发展发挥着不可磨灭的作用，在理解人类社会中出现的众多问题时，不仅仅只从个人选择或个人行为中来发现事物的本质，而且更要考虑环境的因素。
-- 对于当下成功学泛滥的现象，格拉格威尔的观点让那些所谓成功学迷惑的外衣变得不再那么神秘。**成功学并不能让人获得成功。它存在的前提条件是认定每个人都可以获得成功（这里的成功指的是我们内心对自我价值的认定和渴求），但所有人都知道事实并非如此**。
+- 对于当下成功学泛滥的现象，格拉格威尔的观点让那些所谓成功学迷惑的外衣变得不再那么神秘。
+- **成功学并不能让人获得成功。它存在的前提条件是认定每个人都可以获得成功（这里的成功指的是我们内心对自我价值的认定和渴求），但所有人都知道事实并非如此**。
 
 
 
 ### 02.本书主要的内容
-- 在《异类》这本书中我想证明，个性作用并非个人成功的决定因素。成功人士并非白手起家，他们以某种形式获得家族的荫蔽和支持。那些最终变得卓尔不群的人看似完全依靠个人奋斗，其实不然。事实上，他们一直得益于某些隐蔽的先天优势，或是非凡的机缘，抑或某一文化的特殊优势；这使得他们学得快，干得多，以普通人难以企及的方式认知世界。出生的时代与地域对个体的影响巨大。而我们所处的文化背景，以及我们的祖先留传下来的东西，在我们无意识的情况下，就已限定了我们获得成功的方式。因此，只关心成功人士是什么样的人这远远不够。我们还必须探究他们从哪里来，只有这样才能明白为何某些人成功，其他人则流于平庸。
+- 在《异类》这本书中我想证明，个性作用并非个人成功的决定因素。成功人士并非白手起家，他们以某种形式获得家族的荫蔽和支持。
+- 那些最终变得卓尔不群的人看似完全依靠个人奋斗，其实不然。事实上，他们一直得益于某些隐蔽的先天优势，或是非凡的机缘，抑或某一文化的特殊优势；这使得他们学得快，干得多，以普通人难以企及的方式认知世界。
+- 出生的时代与地域对个体的影响巨大。而我们所处的文化背景，以及我们的祖先留传下来的东西，在我们无意识的情况下，就已限定了我们获得成功的方式。因此，只关心成功人士是什么样的人这远远不够。我们还必须探究他们从哪里来，只有这样才能明白为何某些人成功，其他人则流于平庸。
 - 本书第一部分讨论了成功所依赖的优势积累模式：何时何地出生，父母如何营生，成长环境如何决定了你在社会中是否能取得成功。第二部分将讨论了我们从祖先那里继承而来的传统和行为模式，是否也在个人发展道路中发挥决定性作用。
 - 生物学家讨论生物体时常涉及「生态学」：**森林里最高的橡树之所以长得最高，不仅因为有一颗最优质的种子，还因为它在成长过程没有被其他大树挡住阳光，它生长的土壤深厚肥沃，它在还是幼苗的时候没碰上兔子啃树皮，它长成以后也没被砍伐。人们通常只想到杰出人士是最优质的种子，但很少想到成材还必须有充足的日照，有深厚肥沃的土壤，有足够的运气躲过兔子和伐木工人。这本书的主旨不是讨论个体的树，而是讨论整个森林**。
 
@@ -52,7 +55,9 @@
 
 
 ### 06.也需要社会机遇
-- 成功不完全是个人的事情，它同样需要社会机遇。书中举了职业冰球运动员的出生时间影响他们的职业生涯一例，就从时间上强调了先出生的运动员在职业生涯中无论是在身体发育、教育、教练关注度等方面上更具备领先优势。**这里不是一个单一的先入为主的概念，更强调的是必须以宏观的视角去定位各个阶段的每一个坐标具备哪些特殊的优势，而这种优势是受外在环境影响下特有的，需要人有前瞻和远见去辨识出来**。当这样的优势被辨识出来，也就找到了机遇，个体的行为将顺势而为，无形之中获得强大的推动力。
+- 成功不完全是个人的事情，它同样需要社会机遇。书中举了职业冰球运动员的出生时间影响他们的职业生涯一例，就从时间上强调了先出生的运动员在职业生涯中无论是在身体发育、教育、教练关注度等方面上更具备领先优势。
+- **这里不是一个单一的先入为主的概念，更强调的是必须以宏观的视角去定位各个阶段的每一个坐标具备哪些特殊的优势，而这种优势是受外在环境影响下特有的，需要人有前瞻和远见去辨识出来**。
+- 当这样的优势被辨识出来，也就找到了机遇，个体的行为将顺势而为，无形之中获得强大的推动力。
 
 
 
