--- a/Read/ReadShareWiki/02.生活博客/08.生活心得大集合.md
+++ b/Read/ReadShareWiki/02.生活博客/08.生活心得大集合.md
@@ -1,5 +1,6 @@
 #### 目录介绍
 - 01.赚钱也要赚时间
+- 02.如何看待搞副业
 
 
 
@@ -30,11 +31,23 @@
 
 
 
-
-
-
-
-
-
-
+### 02.如何看待搞副业
+- 搞副业合适吗
+    - 其实搞副业这事，如小马过河，有的适合，有的不适合，因人而异。有的人副业发达，甚至副业转正。有的人捡了副业的芝麻丢了主业的西瓜，明显得不偿失。
+    - 还有的人为了追求副业收益被人狠狠收割。这些人，你仔细观察，其实都有。
+- 副业要低风险试错
+    - 你对某个行业，某个领域极有兴趣，但你的机会成本非常高，你不想承担过高的转型风险，作为副业，可以在控制试错成本的前提下，做一些有益的尝试。
+    - 首先要设置止损点，严格止损纪律，然后尝试一下可能性，并得到真实的反馈，再进一步考虑是否继续或转型。
+- 时间精力成本高
+    - 告诉你只要投点钱进去，就能躺着甩手分钱的，都是骗子，除非是你亲爹亲妈！你可能觉得，唉，我副业赚钱了耶，算算投入的时间和精力，赚点蝇头小利，值得么？
+    - 你知道职场上多前进几步能赚多少么？副业确实有一定价值，但对大部分人来说，提升自己职场竞争力，才是更具有效率和正预期的事情。
+- 副业开始是兴趣
+    - 很有意思，很多成功副业转正的人，一开始，副业仅仅是兴趣，与收益预期完全无关。实际上我们发现，很多时候，你越是追求收益，你越容易被收割。
+    - 反而是你追求真正的兴趣和表达的时候，收益会慢慢的找上你。
+- 搞副业被割韭菜
+    - 韭菜三大特征么，贪婪，焦虑，缺乏耐心。这种想法，最容易被收割。无数所谓副业培训课程和副业导师都是收割这样的人。
+    - 你有兴趣，你有时间，你有想法，你想尝试，这都没问题，你说我就是缺钱，就是要快速变现，觉得你这样蛮危险的，不建议这样的人去搞副业。
+- 不要去不劳而获
+    - 花一点钱，跟随别人投资，然后坐等分钱，有人问类似的项目靠不靠谱。特么的这么多赚钱的机会就缺你那点钱么，你想想还有什么是人家依仗你的。
+    - 再说深一点，就算这个事情真成了，你出了点钱，项目赚钱了，你觉得干活的人会心甘情愿的给你按比例分钱么？你知道这事多考验人性么？
 
