--- a/Read/ReadShareWiki/03.故事历史/01.生活哲理小故事.md
+++ b/Read/ReadShareWiki/03.故事历史/01.生活哲理小故事.md
@@ -1,14 +1,15 @@
 #### 目录介绍
-- 01.什么叫位卑莫劝人
+- 01.注意位卑莫劝人
 - 02.人穷不省三种钱
 - 03.没钱不串三人门
 - 05.世间需用三类爱
 - 06.知道人穷断六亲
+- 07.
 
 
 
 
-### 01.什么叫位卑莫劝人
+### 01.注意位卑莫劝人
 - **这句俗语的来历**
     - 说话是为人处世的艺术，事实上中国古代关于说话的俗语也有很多，像《西游记》中开篇就说“口开神气散，舌动是非生”，另外还有像“人穷别说话，位卑莫劝人”等等都是广为流传，对人们的日常行事准则起到了很大的指点作用，所以历经岁月依然流传到了今天。
     - 它是从名著《诗经》中演化而来。句式虽然不及《诗经》优美，但含义还是同样深刻。后来经过人们口头相传，就演变成这句俗语。
