--- a/Read/ReadShareWiki/03.故事历史/02.生活乐趣小故事.md
+++ b/Read/ReadShareWiki/03.故事历史/02.生活乐趣小故事.md
@@ -1,8 +1,9 @@
 #### 目录介绍
-- 01.你知道吃醋出自哪里
+- 01.吃醋出自于哪里
 - 02.吹牛是出自哪里
-- 03.什么叫做丘比特神箭
-- 04.二百五是什么意思
+- 03.曾国藩五勤法则
+- 04.二百五什么意思
+- 07.湘西流传小故事
 - 14.丈二和尚摸不着头脑
 - 18.一字千金有什么故事
 - 19.洛阳纸贵是出自何处
@@ -10,17 +11,20 @@
 - 21.弱水三千只取一瓢
 - 30.衙门门口为何放狮子
 - 31.六尺巷的美谈故事
-- 46.和尚为何自称“老衲”
+- 46.和尚为何自称“老衲
 
 
 
 
-### 01.你知道吃醋出自哪里
+### 01.吃醋出自于哪里
 - 出自哪里
     - 本词最早见于唐张所作笔记《朝野佥载》中。大臣房玄龄为唐朝一代名相，但是他却很怕老婆。房玄龄是出名的妻管严。
 - 小故事
     - 一天，李世民宣布退朝后，百官散去，唯有房玄龄屁颠颠地跟在后面，一直跟到了后宫，李世民还以为他有什么机密大事要单独汇报，一问才知，这位宰相的夫人正在家里发“狮吼”功，堂堂宰相不敢回家，想求一道圣旨作护身符。
-    - 唐太宗想要赏赐房玄龄几个美女做妾。但是，房玄龄却不敢接受，原因就是怕他老婆嫉妒。太宗知道后，派人把房的夫人叫来,说：“朕欲给宰相娶妾,好接续房氏香火,夫人意下如何?”夫人说：“不!除非我死了。”太宗说：“那好吧,来人,把毒酒端上来。你有两种选择,要么答应给宰相纳妾,要么喝下这碗毒酒,你死事情就好办了。”夫人说：“我宁愿死,也不愿看到他娶妾。”结果并未丧命，原来壶中装的是醋，皇帝以此来考验她。唐太宗看到这种情形，心里大为惊骇，叹道：“此等女子我尚畏之，何况玄龄。”从此，吃醋便成了“嫉妒”的同义词，尤其在男女关系中，当一方很在乎另一方时，吃醋就成了家常便饭。
+    - 唐太宗想要赏赐房玄龄几个美女做妾。但是，房玄龄却不敢接受，原因就是怕他老婆嫉妒。太宗知道后，派人把房的夫人叫来,说：“朕欲给宰相娶妾,好接续房氏香火,夫人意下如何?”
+    - 夫人说：“不!除非我死了。”太宗说：“那好吧,来人,把毒酒端上来。你有两种选择,要么答应给宰相纳妾,要么喝下这碗毒酒,你死事情就好办了。
+    - ”夫人说：“我宁愿死,也不愿看到他娶妾。”结果并未丧命，原来壶中装的是醋，皇帝以此来考验她。
+    - 唐太宗看到这种情形，心里大为惊骇，叹道：“此等女子我尚畏之，何况玄龄。”从此，吃醋便成了“嫉妒”的同义词，尤其在男女关系中，当一方很在乎另一方时，吃醋就成了家常便饭。
 
 
 
@@ -34,20 +38,33 @@
 
 
 
-### 03.什么叫做丘比特神箭
-- **爱神丘比特的箭有两种**
-    - 一种箭会带来高尚的爱情，带来永恒爱情的箭是金子制成的，需要小心地将其磨利，这样才能穿透两个恋人的心房并嵌入其中。被金箭射中的恋人将经历三个阶段才能得到永恒的爱情——欲望、容忍与依恋以及深厚的感情。
-    - 另一种箭则会带来强烈的欲望。丘比特的另一种箭是铅制成的，这种箭能射中目标却不能穿透心房，更不能永远嵌入其中。铅箭令人产生的是转瞬即逝的激情，充满了情欲和感官刺激。 
-- **丘比特主管人的爱情和婚姻**
-    - 相传，被金箭射中的人，会深深地忘我地爱上看见的第一个人；被铅箭射中的人，会厌恶并拒绝看见第一个看见的人。丘比特一直被人们喻为爱情的象征，相传他是一个顽皮的、身上长着翅膀的小神，他的箭一旦插入青年男女的心上，便会使他们深深相爱。同时被铅箭射中的人，也会让恋爱变成痛苦、妒恨掺杂而来，甚至由爱生恨……
-- **爱情是丘比特之箭射中心脏后所产生的效应**
-    - 这是大家都公认的一种浪漫解释。但这浪漫的解释中却包含了爱情的特性。据说丘比特射箭时眼睛是绑起来射,因此人们把爱情说是缘分（也可以解释为爱情是盲目的）。因为丘比特是为了赐予人们爱情才向世人发射爱情之箭的，但箭毕竟是武器，它是用来伤人的，而且丘比特一向是将箭射向世人的心脏，由此看来，伤人的箭射中了人的心脏，所以伤心是在所难免的。这就是为什么有人会被爱情伤透了心。
-    - 所以说，丘比特之箭，这个爱情的代名词，就已经告诉了世人，爱情是会伤人心的，既然知道病因了，应该怎样处理呢？人世间不能没有爱情，所以被丘比特之箭射中是件好事，但你若急于求成，将射中的箭使劲地往心里深处插，物极必反必会落得伤心的地步，所以，最好的方法，就是轻松面对，不要想那么多，不要太过小心维护，随遇而安，让心与箭轻松的融合在一起，实在融合不了，就拔掉它，丘比特也有射偏的时候，好马也有失蹄的时候，放弃不一定是失去。
+### 03.曾国藩五勤法则
+- 一曰：身勤
+    - 曾国藩所说的“身勤”就是身体力行、以身作则。曾国藩曾说“余谓天子或可不亲细事，为大臣者则断不可不亲”。曾国藩是这么说的，也是这么做的。曾国藩在军中要求自己早起，不论是什么样的天气，不论是什么样的环境，他一定“闻鸡起舞”，练兵督训，办理各项事务。曾国藩对军中将士说：“练兵之道，必须官弁昼夜从事，乃可渐几于熟。如鸡孵卵，如炉炼丹，未可须臾稍离。”《论语》有曰：“其身正，不令而行；其身不正，虽令不从。”
+    - 言传不如身教，曾国藩就是这样影响手下的幕僚、将领的。不管是个人修行还是管理团队，这一点至关重要，要给周围的人和下属做一个好榜样。
+- 二曰：眼勤
+    - 曾国藩所说的“眼勤”是从细微之处识人。
+    - 曾国藩指派李鸿章训练淮军时，李鸿章带了三个人求见，请曾国藩分配职务给他们。不巧曾刚好饭后出外散步，李命三人在室外等候，自己则进入室内。等到曾散步回来，李请曾传见三人。曾说不用再召见了，并对李说：“站在右边的是个忠厚可靠的人，可委派后勤补给工作；站在中间的是个阳奉险违之人，只能给他无足轻重的工作；站在左边的人是个上上之材，应予重用。”
+    - 李惊问道：“您是如何看出来的呢？”曾笑道：“刚才我散步回来，走过三人的面前时，右边那人垂首不敢仰视，可见他恭谨厚重，故可委派补给工作。中间那人表面上必恭必敬，但我一走过，立刻左顾右盼，可见他阳奉阴违，故不可用。左边那人始终挺直站立，双目正视，不亢不卑，乃大将之材。”
+    - 曾国藩所指左边那位“大将之材”，就是后来担任台湾巡抚鼎鼎有名的刘铭传。曾国藩从细微之处识人，练就了他的一双慧眼，曾府幕僚鼎盛一时，幕僚在曾国藩平定太平军的过程中出谋划策，立下了赫赫功勋。
+- 三曰：手勤
+    - 曾国藩所说的“手勤”其实就是要养成一个好习惯。曾国藩一生养成了三个好习惯：
+    - 一是反省的习惯：曾国藩每一天都写日记，曾国藩说：“吾人只有进德、修业两事靠得住。进德，则孝弟仁义是也；修业，则诗文作字是也。此二者由我作主，得尺则我之尺也，得寸则我之寸也。今日进一分德，便算积了一升谷；明日修一分业，又算馀了一文钱；德业并增，则家私日起。至于功名富贵，悉由命走，丝毫不能自主。”曾国藩通过写日记进行修身，反思自己在为人处世等方面存在的不足，通过这样的反省，不断修炼自己。
+    - 第二个好习惯就是读书习惯，他规定自己每一天必须坚持看历史不下十页，饭后写字不下半小时。曾国藩说“人之气质，由于天生，很难改变，唯读书则可以变其气质。古之精于相法者，并言读书可以变换骨相。”通过坚持读书，曾国藩不仅改变了气质，更磨练了他持之以恒的精神，同时也增长了他的才干，懂得不少为人处世的道理，也让他成了一代大儒。
+    - 第三个好习惯就是写家书，据说曾国藩仅在1861年就写了不下253封家书，通过写家书不断训导教育弟弟和子女，在曾国藩的言传身教之下，曾家后人人才辈出。
+    - 正所谓习惯决定性格，性格决定命运。曾国藩养成很好的习惯，不仅成就了曾国藩自己，也影响了曾家后人。
+- 四曰：口勤
+    - 曾国藩的“口勤”就是他与人的相处之道。曾国藩认为同僚相处“两虎相斗，胜者也哀”。
+    - 据说曾国藩开始同湖南巡抚骆秉章的关系并不好，咸丰三年，曾国藩在长沙初办团练时，骆秉章压根儿就没把曾国藩放在眼里，对曾国藩的工作也不是十分支持。当绿营与团练闹矛盾时，他总是把偏向着绿营。
+    - 让曾国藩特别愤愤不平的是，在靖港兵败，湘军退驻长沙城郊的水陆洲时，骆秉章来到离曾国藩座船仅数十米之遥的码头送客，曾国藩以为他是特意来看望和安慰自己的，内心正十分感激，谁知他送完客人之后竟然转身便走，就当没有看到曾国藩！并且还同长沙官员一起对曾国藩的兵败百般讥讽。
+    - 尽管如此，曾国藩并没有逞口舌之争，而是采取曲意忍让的态度，在他为父守孝后第二次出山之时，他特意拜访了骆秉章，态度十分谦恭又十分热情，之前的那点事就当没发生一样。这让骆秉章大感意外，当场表态，以后湘军有什么困难，我们湖南当倾力相助。
+    - “己预立而立人，己欲达而达人”，曾国藩口勤不仅仅是对同僚和上级，对下属也会耐心地训导，曾国藩秉持的这种为人处世之道，不仅让他成就了自己，也成就了如李鸿章、左宗棠、张之洞、刘铭传、胡林翼等名臣，实现了清末短暂的中兴。
+- 五曰：心勤
+    - 曾国藩所说的“心勤”其实就是坚定的意志品质。曾国藩不管是从科考还是在平定太平军时“屡败屡战”，都有一种精诚所至的信念在支撑他。从各方面下足工夫，功到自然成。曾国藩说“天下古今之庸人，皆以一“惰”字致败。”以勤治惰，以勤治庸，不管是修身自律，还是为人处世，一勤天下无难事。
 
 
 
-
-### 04.二百五是什么意思
+### 04.二百五什么意思
 - **二百五是什么意思**
     - 二百五是一句骂人的话，这是举国周知的，那这句话究竟是什么意思？二百五通常是形容一个人呆头呆脑，不聪明，不开窍，算不上是很粗鲁的话，最多就是调侃而已。从这点来看，二百五虽不是什么褒义词，但贬义的成分不算太重。
 - **它的第一种来历说法**
@@ -60,6 +77,26 @@
     - 唐朝的长安“市长”京兆尹权势很大,出巡时有庞大的仪仗队伍。在最前开路的小吏原为一员,官名叫喝道伍佰，他手里拿着一根长竿赶开路人。后来，喝道伍佰增为二员，但长安群众并没有以两个伍佰称他们，反而说他们是共称伍佰，于是每人就被称为二百五，又因为他们每人手中持一长竿,所以又称他们为二秆子。今天，二百五与二秆子都是莽撞、无礼、粗鲁之人的代名词。
 - **它的第五种说法**
     - 从前有一个傻瓜，有一天他去卖传家至宝，宝物上写“卖尽二百五十八两”，结果他卖的时候有人和他讨价还价，硬是只给250，他想250就250，于是卖得金子250两，很多人笑话他，八两金子很多的，笨蛋。从那以后人们就把做事糊涂的人称为二百五。 
+
+
+### 07.湘西流传小故事
+- 湘西流传小故事
+    - 曾国藩是真正的大器晚成之人，所以他的少年一点儿也不出彩。一个流传非常广的故事是这样说的：
+    - 少年曾国藩在家里读书，有一篇文章他读了很多很多遍，可就是背不下来。他就一遍一追地读，一遍一遍地背。
+    - 没想到这天晚上家里进了贼，那贼躲在梁上，就等着曾国藩读完书睡觉去，好下手偷东西。可曾国藩人笨，却够勤勉，背不下来就不去睡觉。
+    - 贼人等到后半夜，实在等不下去了，十分生气地跳出来，对曾国藩大骂：“就你这么笨还读什么书？我听几遍就会背了！”
+    - 于是贼人将那篇文章从头到尾地背诵了一遍，然后扬长而去。
+- 曾国藩写日记自省
+    - 曾国藩是个庸人。这个“庸人”不是指最后的功绩，而是说他的起点——曾国藩是一个资质平平的人。曾国藩是所有庸人的楷模。他成就理想的道路，没有少年天才，没有仗剑天涯。
+    - 曾国藩学做圣人的方法很简单，就是“写日记”，为此他专门向唐鉴请教。首先，他把写日记当成生活中的一件大事，日记中规定的，就一定要做到。
+    - 其次，日记的作用是抓住生活中的细节，通过每一个细节来改变自己。所以要反思一整天的活动，甚至每一个念头。
+    - 通过记日记的方式，曾国藩提高了学习效率，也对自己的性格、脾气进行反省。对于自己最爱犯的“言不由衷”“虚伪”“浮夸”，他在日记中也是高度警惕。
+    - 至于戒“色”，他也动用了大量心理能量。一旦自己动了色心，多看了哪个美妇人一眼，他回家就立刻记下来，痛切自责一番。
+    - 曾国藩的一生从来没有过一步登天的好运，考上进士、正式踏入官场以后，他也是按部就班，一层一层往上升。
+- 建立监督意识
+    - 为了坚持圣人标准，曾国藩把日记送给朋友们传阅，主要目的就是把自己的行为坦诚地公布在朋友面前，让大家一起监督，这样他就不好意思偷懒了。
+- 最后的成就说明
+    - 曾国藩的修身过程给后人的最大意义是，他以自己的实践证明，一个资质非常平庸的人，如果实心实意地进行自我完善，通过陶冶变化，也可以成为超人。
 
 
 
