--- a/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
+++ b/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
@@ -19,6 +19,7 @@
     - 3.5 gRPC如何使用
     - 3.6 同步和异步操作
     - 3.7 gRPC一些操作
+    - 3.9 gRPC问题解决
 - 04.gRPC通信实践
     - 4.1 gRPC通信技术点
     - 4.2 核心设计思路
@@ -316,7 +317,7 @@
 - 问题思考一下
     - 能否把生成的代码拷贝出来（如果proto不经常变的情况），把插件禁用掉，避免每次都生成？？？
 - 如何使用gRPC去做网络请求
-    ``` java
+    ```
     //构建Channel
     channel = ManagedChannelBuilder.forAddress(host, port).usePlaintext().build();
     //构建服务请求API代理
@@ -352,6 +353,26 @@
     - 这意味着，例如，您可能有一个 RPC 在服务器端成功完成（“我已经发送了我所有的响应！”）但在客户端失败（“响应到达前我已经截至了！”）。
 - RPC 取消
     - 客户端或服务器可以随时取消 RPC。RPC会立即响应取消操作而终止，以便不再进行进一步的工作。
+
+
+
+#### 3.9 gRPC问题解决
+- io.grpc.StatusRuntimeException:　UNIMPLEMENTED
+    - 这个错误网上很多，大部分情况下 是由于方法找不到，即客户端与服务端proto的内容或者版本不一致，这里只需要改成一致，一般问题都能解决
+- DEADLINE_EXCEEDED: deadline exceeded after 149944644ns
+    - 这种错误明细我这里就不打印了，这里一般是读取数据超时，
+    - 问题原因：一般是grpc超时时间设置短了，或者下游服务响应超时。
+    - 解决方案：修改grpc超时时间，或者检查grpc服务端是否有问题
+- Exception: NAVAILABLE: upstream request timeout
+    - 问题原因：这里可以理解为连接超时，这里说明健康检查也超时
+    - 解决方案：检查grpc服务端是否有问题。
+- INTERNAL: Received unexpected EOS on DATA frame from server
+    - 问题原因：这里可翻译为收到了空消息，这里可能是服务端没响应
+    - 解决方案：检查端口是否对应上，服务是否正常，特别是docker中的端口映射配置是否正确。
+- io.grpc.StatusRuntimeException: UNKNOWN
+    - 问题原因： 从字面意思是未知错误，这个是服务端反馈，主要是服务端报了一些未知异常，比如说参数传的有问题等
+    - 解决方案： 检查客户端传参是否有个别异常，打印出有问题参数
+
 
 
 ### 05.ProtoBuf核心原理
