--- a/Read/ReadShareWiki/02.生活博客/06.不为人知的哲学.md
+++ b/Read/ReadShareWiki/02.生活博客/06.不为人知的哲学.md
@@ -2,7 +2,7 @@
 - 02.考虑失败关注细节
 - 03.优雅与老板谈工资
 - 04.张仲平的送礼艺术
-
+- 05.普通人要学会借力
 
 
 
@@ -69,6 +69,38 @@
     - 张仲平知道侯昌平并不是不收礼，而是怕收礼要办事，首先去掉侯昌平的后顾之忧去掉，让侯昌平不得不收初次见面好朋友的好礼。
     - 这短短的几句话就立马让侯昌平放下心里忌惮，拉近了彼此之间的距离，即使以后有事情需要他帮忙，能帮的就帮，不能帮的也不会强他所难。
     - 也让侯昌平觉得这是朋友之间的交情，这不是在送礼，是在交朋友。
+
+
+
+### 05.普通人要学会借力
+- 什么是“借力”
+    - 现在这个社会，竞争很大，普通人要想出头，很难。
+    - 什么是“借力”？简单地说，就是借助其他力量帮助自己实现目标。这种力量，可以是人，也可以是平台。
+- 普通人一定要学会“借力”
+    - 普通人，大多数都出身寒门，没什么背景。在这个时代，普通人要想脱颖而出，单靠自己的努力，是远远不够的。因为，他们的资源太有限了。
+    - 寒门的圈子，还是寒门。如果只依靠自己，很容易陷入困境或者停滞不前。而借力，就是利用外部的力量来帮助自己实现目标，这是一种智慧，也是一种必要。
+- 一个典型的借力成功的例子
+    - 刘彻是汉景帝的第十一子，出生时没有被立为太子。他在竞争太子之位时，遇到了很多困难和阻碍。刘彻是如何通过借力而登上帝位呢？
+    - 他首先借了母亲王太后的力量，王太后是景帝最宠爱的妃子，她对刘彻十分疼爱，她在景帝面前为刘彻说好话，为刘彻争取机会。
+    - 其次，他借了景帝身边的大臣们的力量，他通过表现自己的孝顺、谦虚、聪明等优点，赢得了大臣们的赞誉和推荐。
+    - 最后，他借了天下百姓的力量，他在太子之位还没有确定时，就开始关心民生、改革政治、奖励贤能等事务，使得天下百姓都对他有所期待。
+    - 通过这样一系列的借力策略，刘彻最终成为了汉武帝，并且开创了汉朝鼎盛时期。可以看到，不光普通人需要借力，连皇太子都需要。借力很重要，那么，我们怎么才能找到可以借力的人或是平台呢？
+- 要勇敢的行动起来，主动跟对方联系
+    - 联系可能没结果，但不联系，一定没结果。有时候，我们可能已经发现了一些可以借力的人或是平台，但是因为害怕、担心、羞涩等原因而不敢去接触。这样就错失了很多宝贵的机会。
+- 示弱的同时，也别放低姿态
+    - 在寻求别人帮助的时候，我们要适当地示弱，表达自己的困难和需求，让对方感受到自己的诚意和谦虚。
+    - 但是，这并不意味着我们要完全放低姿态，否则会让对方觉得我们没有价值和能力，也不会尊重和信任我们。
+    - 因此，在示弱的同时，我们也要展示自己的优势和价值，让对方知道我们可以为他们做些什么，或者给他们带来什么好处。
+    - 比如，我们可以说：“我在这方面不太擅长，所以想请教您一些经验和建议。但是我在另一个方面有一些专业知识和资源，如果您有需要的话，我很乐意与您分享。”
+- 用长期连接代替一次性消费
+    - 在借力的过程中，我们不应该把对方当作一次性的消费品，而是应该把对方当作长期的合作伙伴。
+    - 因此，在得到对方帮助之后，我们不应该就此断了联系，而是应该继续保持沟通和关系，给对方一些反馈和感谢，甚至提供一些额外的帮助和回报。
+    - 这样可以增加对方对我们的信任和好感，也可以为未来的合作打下良好的基础。
+
+
+
+
+
 
 
 
