--- a/Read/ReadShareWiki/02.生活博客/02.生活感想大集合.md
+++ b/Read/ReadShareWiki/02.生活博客/02.生活感想大集合.md
@@ -14,6 +14,8 @@
 - 14.承认自己能力有限
 - 15.一年经验用十年
 - 16.克服周一综合症
+- 17.如何让自己有趣
+- 18.空闲时间需提升
 
 
 
@@ -84,11 +86,13 @@
     - 第一，不好的事情已经出现了，怪谁都没用，重要的是解决问题。第二，你发脾气不但解决不了问题，还会让你费心费神，何必呢？
     - 在问题出现之后，尽可能快且有效地解决问题，之后认真地反思问题出在哪里，避免下次再出差错。这才是我真正要达到的目的。
     - 以前，工作进度被耽搁了，之后听到有人总是在哪里抱怨。后来实在忍不了，说：“现在出了问题，我们解决问题，你在这里狂轰滥炸发脾气，说谁做得不好，谁的错，谁垃圾，有用吗？
-    - 你在这发脾气骂人都两个小时了，如果你骂人有用，你接着骂，我们先回去。如果想解决问题，给一个好的解释，那我们一起想办法解决问题。”
-- 即便这样，本来可以很快解决的事，因为非要分个什么对错好坏，骂骂咧咧的，从下午4点一直争吵到晚上9点才解决。成年人了，遇见事情，为什么不能冷静下来，想想问题出在哪里，怎么解决呢？骂人是爽，占了上风的确很威风，可是有什么用？问题能解决吗？下一次是否能避免问题再次发生？并且一般能跟我们发生冲突的人，多数都是平日里打交道、有来往的人。得饶人处且饶人，凡事想开点，如果生活中事事都去计较，都要分对错，人还怎么活？
-- 小孩子才分对错，在父母面前理论清楚，到底是他先动手打的你，还是你先动手掐的他。成年人就算了，很多时候不是因为没有对错，而是对错根本不重要。
-- 凡事记住两点：第一，你很贵，你的时间更宝贵，不要为一些小事浪费自己的宝贵时间。鲁迅说：“浪费别人的时间，等于谋财害命；浪费自己的时间，等于慢性自杀”。别人的时间，我们耽误不起，自己的时间更耗费不得。第二，凡事退一步海阔天空。对方没谋财没害命，不疼不痒的口角之争，都可以忽略不计。适当地妥协和让步，会体现你的素质和修养。并且，人成熟以后，事情多得要命。要工作，要赚钱，要恋爱，要结婚，要生娃，要学习维护一段感情，要学习为人父母，要孝顺爸妈，要提升自己……
-- 总之，有好多就算永远不睡觉都做不完的事情。所以根本没必要与人较劲，争个上风下风。当然，如果对方确实是那种欺软怕硬、得理不饶人的人，也无须一再容忍，必须要让对方知道你也是有底线的人。
+    - 发脾气骂人都两个小时了，如果你骂人有用，你接着骂，我们先回去。如果想解决问题，给一个好的解释，那我们一起想办法解决问题。”
+    - 冷静下来，想想问题出在哪里，怎么解决呢？骂人是爽，占了上风的确很威风，可是有什么用？问题能解决吗？下一次是否能避免问题再次发生？
+- 记住两点事情
+    - 凡事记住两点：第一，你很贵，你的时间更宝贵，不要为一些小事浪费自己的宝贵时间。第二，凡事退一步海阔天空。对方没谋财没害命，不疼不痒的口角之争，都可以忽略不计。
+    - 适当地妥协和让步，会体现你的素质和修养。并且，人成熟以后，事情多得要命。要工作，要赚钱，要恋爱，要结婚，要生娃，要学习维护一段感情，要学习为人父母，要孝顺爸妈，要提升自己……
+    - 总之，有好多就算永远不睡觉都做不完的事情。所以根本没必要与人较劲，争个上风下风。
+    - 当然，如果对方确实是那种欺软怕硬、得理不饶人的人，也无须一再容忍，必须要让对方知道你也是有底线的人。
 
 
 
@@ -302,8 +306,41 @@
 
 
 
+### 17.如何让自己有趣
+- 为何成为有趣人
+    - 想要使自己具有更加独特的价值？亦或是想要让自己能摆脱千篇一律的生活色彩？无非就是想改变别人对自己的看法或自己对本身的态度。
+    - 成为一个有趣的人，最重要的是成为一个独特的人，而一个独特的人，最重要的是有一颗独特的心（灵魂？）。
+    - 读书、写字、旅游、生活——凡是你能想到提升自己什么见识、智慧这些内在东西的最终目的不都是让你给别人的感觉不一样吗?
+    - 换句话说就是使自己与他人不同，即为独特，即为有趣。有点鹤立鸡群的感觉，但又不能就这样张开翅膀拍拍走人，这样的叫隐士。
+- 如何让自己有趣
+    - 1、经常看一些有趣的书籍或者电影，丰富自己的幽默见识，记录下一些有趣的小段子；
+    - 2、善于发现生活中与段子或者有趣的情节似曾相识的地方，不经意间用上你之前看过的段子，逗别人一笑，千万要自然不要刻意；
+    - 3、学会逆行思维，经常说一下不按常理出牌但是却有合理的答案
+    - 4、故意犯错，故意说错一些常识性的成语，比如打篮球队与队相互输赢，你就说：真是一物降一物啊，这样别人会忍不住笑你，气氛会更融洽
+    - 5、关注点易于别人，比如有人说马上来，但是很久没来，你就说：同志，你的马是不是没吃饱，跑的这么慢？
+    - 6、最直接的方法就是给别人讲笑话，讲段子。
 
 
+
+### 18.空闲时间需提升
+- 背景介绍下
+    - 工作时间之余，有很多空闲时间，有许多事情可做。现在列举几件。
+- 第一：健身
+    - 每天可以抽出一到两个小时时间，到健身房锻炼身体，不仅能强身健体，又能广交好友。不是有句话说的好，“身体才是革命的本钱”。
+    - 总有人说没有时间健身，但是却很少听到有人说，没有时间打游戏，或者没有时间熬夜刷新闻微博小视频。
+- 第二：看书
+    - 看适合自己专业领域的书籍，这样既能提高自己专业方面的技能，又能陶冶自己的情操，不是有一句话说了“书中自有颜如玉，书中自有黄金屋”。
+    - 当你迷茫不知所措的时候，那就去读书，看看别人的生活、想法，或许就可以解开你的困惑。有时候一个字、一个词或是一句话就能点醒你。
+- 第三：学习感兴趣的技能
+    - 找到自己的热爱（技能）并且去学习实践到掌握不断进步实在是太重要了。真的，没有梦想，跟咸鱼有什么区别！
+    - 梦想不是要多高大上，而是你有自己的追求。哪怕你是在寻找追求的路上，你也不会感叹时间太多，不知道干什么。
+- 第四：适当娱乐
+    - 陪自己的好基友出去打两把游戏，回味一下当年一起开黑的感觉，也可以加深感情，过过自己的游戏瘾。
+- 第五：陪重要的人
+    - 重要的人，比如家人，爱人，朋友等等。在什么地方付出时间就会在哪方面有回报。
+    - 人的感情也是如此，陪父母聊天，陪媳妇聊天，做饭，有孩子的可以陪孩子学习，徒步，读书等。周围重要的人，感情经营好了，也为自己日后需要陪伴时打下了基础。
+- 怎样利用工作之余的时间
+    - 一切自有你自己决定，好好利用空闲时间，它能改变一个人，如果当你去浪费这段时间，你将会发现自己一无所获。
 
 
 
