--- a/Read/ReadShareWiki/02.生活博客/04.生活沟通的记录.md
+++ b/Read/ReadShareWiki/02.生活博客/04.生活沟通的记录.md
@@ -1,23 +1,36 @@
 #### 目录介绍
-- 02.表达批评的方式
-- 03.表达赞美的方式
-- 04.表达说话分寸的方式
+- 01.批评的沟通方式
+- 02.被批评沟通方式
+- 03.赞美的沟通方式
+- 04.说话分寸的方式
 - 05.表达拒绝的方式
 - 06.表达求助的方式
-- 07.关于工作反馈方式
-- 08.表达相互竞争方式
+- 07.工作反馈的方式
+- 08.相互竞争的沟通
 - 09.表达建议的方式
 - 10.表达提问的方式
-- 11.关于表达送客方式
-- 12.尽量少参加是非八卦
+- 11.表达送客的沟通
+- 12.少参加是非八卦
 - 13.聊天尺度的问题
-- 18.关于其他问题说明
+- 18.其他问题的沟通
 
 
 
 
 
-### 02.表达批评的方式
+### 01.批评的沟通方式
+- 注意批评的目的
+    - 批评：不是告诉对方他怎么错了，而是用谈心的方式具体的告诉他怎么才能做对。
+    - 刷新信息，刷新认知，把错误的行为覆盖掉，让新的局面得以呈现。
+- 批评沟通的动作
+    - 1.场合上的控制。能一对一的时候就不要当看他人的面批评，能小范围的时候就不要在大范围批评。
+    - 2.时间上的控制。批评最好发生在对方做错后的第一时间，不要翻旧账。
+    - 3.批评之前还是要通过提问，跟对方确认一下，事情到底是不是我们了解到的样子。要把事情前因后果了解清楚！
+    - 4.了解到对方的问题后，把批评转译为一个具体的动作，告诉对方怎么做才能做对。
+    - 5.设定一个反馈的时间点，了解批评是否真正被落实。改正了，就可以用“激励”的技巧，帮助他把行为建模，这次批评就导向了一个非常好的结果。
+    - 6.如果批评后还未改正，进人辅导环节，看看上次批评时没有找准的盲区究竟在哪里，把沟通持续下去。
+    - 7.沟通结束前可以询问对方:“这是现在的情况，你说说你的想法吧。”
+    - 8.批评一定不能停在你的话语上，而要停在对方的总结或者目标上，这样对方就可以带着自己的目标总结。
 - **批评也要看关系**
     - 忠言未必逆耳，即便你是好意，对方也未必会领情，甚至误解你的好意。除非你和对方有一定的交情或信任基础，否则不要随意提出批评。
 - **批评也可以很悦耳**
@@ -28,27 +41,38 @@
 
 
 
+### 02.被批评沟通方式
+- 被批评的场景
+    - 如果你被批评了，怎么回应？
+- 被批评后的动作
+    - 1.不要在公开场合暴露自己的情绪。
+    - 2.不要急于解释。要虚心倾听，让对方说痛快。如果方便的话可以在领导批评时，做笔记。
+    - 3.千万不要想怎么安抚领导的情绪，要想怎么解决问题，把领导的注意力转移到解决具体的问题上去。可以说:“领导，我明白了，我有这么几个办法来补救这个问题，您看行不行？”
+    - 4.主动约反馈点。你可以这么说领导:“你看这样好不好我完全明白了，我立即就开始整改你给我一个星期的时间，一个星期后我来给你汇报一下我的心得和感受，你再指导我一下。”
 
-### 03.表达赞美的方式
+
+
+
+### 03.赞美的沟通方式
 - **赞美行为而非个人**
-    - 举例来说，如果对方是厨师，千万不要说：你真是了不起的厨师。他心里知道有更多厨师比他还优秀。但如果你告诉他，你一星期有一半的时间会到他的餐厅吃饭，这就是非常高明的恭维。
+    - 举例来说，如果对方是厨师，千万不要说：你真是了不起的厨师。他心里知道有更多厨师比他还优秀。
+    - 但如果你告诉他，你一星期有一半的时间会到他的餐厅吃饭，这就是非常高明的恭维。
 - **透过第三者表达赞美**
     - 如果对方是经由他人间接听到你的称赞，比你直接告诉本人更多了一份惊喜。相反地，如果是批评对方，千万不要透过第三者告诉当事人，避免加油添醋。
+    - 比方说你想夸你们小区的张大妈为人善良，你可以说：“隔壁王大爷天天跟我说您为人善良，今日一见，还真是那么回事呢。”这就比你直接说一些空洞的赞美要可信多了。
 - **客套话也要说得恰到好处**
-    - 客气话是表示你的恭敬和感激，所以要适可而止。有人替你做了一点点小事，你只要说谢谢。、对不起，这件事麻烦你了。至于才疏学浅，请阁下多多指教。这种缺乏感情的客套话，就可以免了。
+    - 客气话是表示你的恭敬和感激，所以要适可而止。有人替你做了一点点小事，你只要说谢谢、对不起，这件事麻烦你了。至于才疏学浅，请阁下多多指教。这种缺乏感情的客套话，就可以免了。
 - **面对别人的称赞，说声谢谢就好**
     - 一般人被称赞时，多半会回答还好！或是以笑容带过。与其这样，不如坦率接受并直接跟对方说谢谢。有时候对方称赞我们的服饰或某样东西，如果你说：这只是便宜货！反而会让对方尴尬。
-- **通过第三方赞美别人**
-    - 我们在赞美别人的时候，不要直接的去夸赞他，而是所采用第三方的赞美。比方说你想夸你们小区的张大妈为人善良，你可以说：“隔壁王大爷天天跟我说您为人善良，今日一见，还真是那么回事呢。”这就比你直接说一些空洞的赞美要可信多了。
 - **不经意之间赞美**
-    - 赞美一定不要为了赞美而赞美，要不经意之间。你们在聊天的时候，突然给她一个赞美，然后不要等她的回应，继续刚才的说话内容，就当没发生一样。
-    - 记住，你的赞美不需要立刻获得她的肯定，你只是刚好发现了，说出来而已，你并不期待对方会给你好的奖励。你不经意地忽略掉赞美，但是女人却会一下子把注意力转移到你的赞美上了，她可能会继续追问你为什么会那么说她，这也是她对你的一种投资。
+    - 赞美一定不要为了赞美而赞美，要不经意之间。你们在聊天的时候，突然给别人一个赞美，然后不要等别人的回应，继续刚才的说话内容，就当没发生一样。
+    - 记住，你的赞美不需要立刻获得她的肯定，你只是刚好发现了，说出来而已，你并不期待对方会给你好的奖励。
 
 
 
 
 
-### 04.表达说话分寸的方式
+### 04.说话分寸的方式
 - **说话需要注意场合**
     - 不要当着外人的面批评自己的朋友或同事，这些话私底下关起门来说就好。
 - **说话语气要平等**
@@ -77,7 +101,7 @@
 
 
 
-### 07.关于工作反馈方式
+### 07.工作反馈的方式
 - **主动表达帮忙**
     - 如果一时之间无法解决部属的问题，不要说“这种事先不要来烦我，”而是告诉他“我知道有谁可以帮忙。”
 - **直接描述现状**
@@ -87,7 +111,7 @@
 
 
 
-### 08.表达相互竞争方式
+### 08.相互竞争的沟通
 - **有欣赏竞争对手的雅量**
     - 当你的对手或讨厌的人被称赞时，不要急着说：可是…，就算你不认同对方，表面上还是要说：是啊，他很努力。显示自己的雅量。
 - **吃亏有时才是占便宜**
@@ -114,19 +138,22 @@
 
 
 
-### 11.关于表达送客方式
+### 11.表达送客的沟通
 - **下达送客令**
-    - 如果你觉得时间差不多该结束谈话或送客，但对方似乎完全没有要起身离开的意思，可以说：“不好意思，我得打通电话，时间可能有点久…”，或是：“今天真的很谢谢你来…”。你也可以不经意地看看自己的手表，让对方知道该走了。
+    - 如果你觉得时间差不多该结束谈话或送客，但对方似乎完全没有要起身离开的意思，可以说：“不好意思，我得打通电话，时间可能有点久…”。
+    - 或是：“今天真的很谢谢你来…”。你也可以不经意地看看自己的手表，让对方知道该走了。
 
 
 
-### 12.尽量少参加是非八卦
+### 12.少参加是非八卦
 - **不当八卦传声筒**
     - 当一群人聊起某人的八卦或传言时，不要随便应声附和，因为只要说出口的话，必定会传到当事人耳中。最好的方法就是不表明自己的立场，只要说：“你说的部份我不太清楚。”
 - **遇尖锐问题退一步想**
     - 遇到尖锐的问题，可以退一两步来考虑，话不要说的太直了。就如那个例子，你的一个好朋友吸毒了，你想劝他，如果直接跟他说，他不可能听的进去的，可以退两步想，为什么他会吸毒啊？就会想肯定是越到不开心的事或者有难言之隐吧，这样就可以朝这方面去想，跟对方聊他不开心的事，如果对方能够感受到你的真诚，那么他会把吸毒的事情告诉你，你才好更好的劝他。
     - 其实生活中的很多事都是这样的，可以退一两步来想，这样就会豁然开朗。想一想为什么会这样，原因是什么，站在对方立场考虑他希望甚至他渴望什么，需要什么，然后朝这方面去聊就会聊很多，有话题可聊。
-
+- 议论是非不要插嘴
+    - 有人在你面前议论、八卦别人的时候，最好不要插嘴，找个理由借故走开，不然如果消息传出去，别人会以为是你说的。
+    - 在自己能力较弱没有话语权的时候，就少表达自己的看法。
 
 
 
@@ -148,7 +175,7 @@
 
 
 
-### 18.关于其他问题说明
+### 18.其他问题的沟通
 - **先报上自己大名**
     - 忘记对方的名字，就当作是正式场合，向对方介绍自己的名字或拿出名片，对方也会顺势报上自己的大名和名片，免除了叫不出对方姓名的窘境。
 - **掌握1秒钟原则**
