--- a/Read/ReadShareWiki/02.生活博客/05.工作笔记大集合.md
+++ b/Read/ReadShareWiki/02.生活博客/05.工作笔记大集合.md
@@ -6,6 +6,7 @@
 - 05.四维思考思路清
 - 06.远离低效的会议
 - 07.专注于基础知识
+- 08.思考非管理时间
 
 
 ### 01.工作稳定的探讨
@@ -167,6 +168,15 @@
 
 
 
+### 08.思考非管理时间
+- 背景介绍
+    - 关于时间管理的书籍，市面上已经有许多呢！对于我们上班族来说，每个人的时间都是一天24小时。
+    - 其实剩余自己可以自由支配的时间并不是很多，大概就是2到4个小时。如果合理安排这个时间，是十分重要。
+- 计划任务坚持多久
+    - 如果你因为一时激动，而定制4个小时的学习任务，那么你又可以坚持多久呢？只要时间一长，那么便会出现各种意外来干扰你的计划，虽然有的时候你的计划看起来是十分美好，可是那又怎样，没有结果的计划只能说是一张废纸。
+    - 而当你有多个目标需要实现的时候，最重要的不是去怎么管理你的时间，而是去思考时间。
+- 思考时间的动力
+    - 完成每一项目标的真正动力是什么？这个目标是否是我想要的，我打算为实现这个目标付出多大的代价。要是我能达成这个目标会对我造成多大的改变和影响。
 
 
 
