--- a/Read/ReadShareWiki/03.故事历史/03.小故事的大道理.md
+++ b/Read/ReadShareWiki/03.故事历史/03.小故事的大道理.md
@@ -18,7 +18,7 @@
 - 先描述一下小故事
     - 有一个年轻人，一直得不到重用，他十分的苦闷。 为此，他专程去很远的地方找智者询问。他终于见到了智者，年轻人问智者：“命运为什么对我如此不公平呢？” 
     - 智者没有直接回答他，而是从地上捡了一颗小石子，丢到远处的乱石堆中，对年轻人说：“你去把我刚才扔出去的小石子找回来。”年轻人再乱石堆中翻寻了半天，也没找到，他不知道到底哪一颗是老人扔出去的，因为每一颗石子看起来都差不多。 
-    - 他无功而返，智者从手上取下戒指，同样扔到那堆乱石中，让年轻人去找回来。这一次，年轻人没费吹灰之力就找到了——那枚闪着金光的戒指。
+    - 他无功而返，智者从手上取下金子，同样扔到那堆乱石中，让年轻人去找回来。这一次，年轻人没费吹灰之力就找到了——那枚闪着金光的金子。
 - 故事让人领悟到什么 
     - 智者什么也没再说，年轻人却醒悟了：如果自己只是一颗小石子，而不是金子时，就不要埋怨命运对自己不公平。
 - 该故事的道理
