--- a/Read/ReadShareWiki/03.故事历史/10.杜月笙处事故事.md
+++ b/Read/ReadShareWiki/03.故事历史/10.杜月笙处事故事.md
@@ -38,7 +38,8 @@
 ```
 - 事情做成了，杜月笙并不居功自傲。好像刚刚立的大功和自己无关一样。
 - 立下如此大功，但也没有得到提拔。杜月笙没有任何抱怨，仍专心干好看门小弟的事。
-- 有一年，老板娘林桂生突然重病在床好几个月，杜月笙就主动在床边端屎端尿，尽心尽力地把她的病给伺候好了。不过，这并没引起大太太的过多褒赏，恭顺尽心是下人的分内之事，顶多也就说明这小孩儿挺勤快，有点眼力见而已。　- - 真正让林桂生对小杜产生重视还是因为这件事——林桂生的一个闺蜜病了，闺蜜病了得表示一下啊，送礼不如送人情，小杜伺候人挺周到的，就把他派去伺候吧。几个月后，小杜也争气，把林桂生的闺蜜也给伺候好了。　　
+- 有一年，老板娘林桂生突然重病在床好几个月，杜月笙就主动在床边端屎端尿，尽心尽力地把她的病给伺候好了。不过，这并没引起大太太的过多褒赏，恭顺尽心是下人的分内之事，顶多也就说明这小孩儿挺勤快，有点眼力见而已。
+- 真正让林桂生对小杜产生重视还是因为这件事——林桂生的一个闺蜜病了，闺蜜病了得表示一下啊，送礼不如送人情，小杜伺候人挺周到的，就把他派去伺候吧。几个月后，小杜也争气，把林桂生的闺蜜也给伺候好了。　　
 - 再次见面这闺蜜就当着林桂生的面夸这小杜真是好，有这么个下人真福气，真让人羡慕！林桂生一听，这小孩还挺给自己长脸啊，拿得出手！从此，杜月笙逐步得到林桂生的重用，两年后，林桂生把他推荐给了黄金荣，杜月笙从此便进入了黄宅的“权力核心”。
 - 杜月笙说“不要怕被别人利用，人家利用你说明你还有用。”一个人只要诚心诚意做事，不计较一时回报，不攀比周边待遇，迟早会有出头之日。
 
@@ -125,23 +126,6 @@
 - 黄金荣喜新厌旧，看上戏子露兰春，而林桂生无情被抛弃。杜月笙一直感激阿桂姐的知遇之恩，知道她如今有难，二话不说，为她买了一套宅院，还派人供养着她，见了面还照样叫她“阿桂姐”。
 - 黄金荣为抢戏子露兰春，打了卢筱嘉，卢的父亲卢永祥一怒之下逮捕了他，还准备将他枪毙。黄金荣一死，杜月笙就可轻松坐上青帮主之位，然而杜月笙却没这么做，他不忘本，四处托人营救黄金荣，不但赠送卢一大半公司股份，又外加10万块，才成功救出了黄金荣。
 - 身边人劝杜月笙说：“大哥没必要这么慷慨，帮是人情，不帮是本分。”杜月笙回答：“受人恩惠，不敢相忘。知恩要图报，落井不下石。”滴水之恩，当以涌泉相报。
-
-
-
-
-### 14.杜月笙被绑票的事情
-- **杜月笙是谁**
-    - 杜月笙号称中国三百年来帮会第一人，一生叱咤风云，闯得猛、玩得火、斗得凶、下手狠，出入黑白两道，绑票、贩鸦片、锄汉奸、资助抗日等事情都做。
-- **绑票的经过**
-    - 1937年淞沪会战后，上海沦陷，杜月笙去了香港，1941年的时候，香港处境也很危险，杜月笙只能到重庆去投靠蒋介石，到了重庆后，杜月笙有一天出门办事，光天化日就被人绑架了，杜月笙是见过大场面的，当年闯上海滩的时候，从死人堆里面爬出来的，因此，也没惊慌，看看是怎么回事，到了地方后，绑匪说他们只图财不害命，给40万就放他走。
-- **为何杜主动要求给90万？**
-    - 杜月笙本身也干过绑票撕票的活，见对方只是劫财，就说了一句，我给你们90万，让绑匪大吃一惊，纵横猜想，故事里杜月笙要多给50万，主要还是有多方面的考虑，第一是害怕绑匪撕票，想先稳住绑匪的情绪，保住自己的命。第二就是想探一探绑匪的胃口有多大，顺带摸一摸这些人的背景。如果是一般的绑匪，怎么会如此地狮子大开口。换而言之敢伸手向自己要这么多钱的人，肯定不是普通绑匪，难保后面没有大靠山。
-- **幕后是谁**
-    - 杜月笙终于查到，绑匪的幕后主使竟然是老相识黄金荣的徒弟。而黄金荣不久后也写信送上门道歉，深言道完全是手下的人在自作主张，大水冲了自家龙王庙了，并让手下的人悉数奉还了勒索来的90万银元，这件事才就此作罢。黄老头子也帮了自己不少，现在老头子在上海闭门不出，不和日本人合作，固然是有点骨气，可是这样也断了他的收入来源，手头紧也是难免的。为了黄金荣的这张老脸，杜月笙装了一回糊涂，直到黄金荣去世，也没有再提过，更没有想过要去报复。 
-- **关于谣言存在质疑**
-    - 有人说，金九荣就带着黄金荣的信亲自上门道歉，在信中，黄金荣说，因为日本人占领了上海，手头有点紧，想要借点钱才出此下策去绑架杜月笙。
-    - 黄金荣会不会为了四十万去雇人绑自己的兄弟？黄金荣爱财这个不假，正是因为爱财，所以攒了很多钱，不管是什么时候，黄金荣都没有缺过钱，正是因为爱财，他更知道什么样的钱能拿，什么样的钱不能拿！在黑帮里混到黄金荣这个级别，到老了还需要靠绑票这样的低级手段去整钱，那不是打青帮的脸吗？即使去绑票，为什么要去绑杜月笙？上海没有有钱人了，竟然要到重庆去绑票，而且还是向自己的兄弟赚钱！说明黄金荣有互联网精神？向熟人下手？黄金荣本身就是黑帮老大，难道不知道江湖规矩，不知道江湖道义？要知道黄金荣当年被绑架的时候，还是杜月笙到处走关系给营救出来的。
-- 关于更多详细内容，可以看我的博客大汇总：https://blog.csdn.net/m0_37700275/article/details/79832978 或者 https://blog.csdn.net/m0_37700275/article/details/82972318
 
 
 
