--- a/Read/ReadShareWiki/04.其他精品/03.时间管理一百天.md
+++ b/Read/ReadShareWiki/04.其他精品/03.时间管理一百天.md
@@ -66,24 +66,6 @@
 
 
 
-
-### 00.空闲时间需提升
-- 工作时间之余，有很多空闲时间，有许多事情可做。现在列举几件。
-- 第一：健身
-    - 每天可以抽出一到两个小时时间，到健身房锻炼身体，不仅能强身健体，又能广交好友。不是有句话说的好，“身体才是革命的本钱”。总有人说没有时间健身，但是却很少听到有人说，没有时间打游戏，或者没有时间熬夜刷新闻微博小视频。
-- 第二：看书
-    - 看适合自己专业领域的书籍，这样既能提高自己专业方面的技能，又能陶冶自己的情操，不是有一句话说了“书中自有颜如玉，书中自有黄金屋”。当你迷茫不知所措的时候，那就去读书，看看别人的生活、想法，或许就可以解开你的困惑。有时候一个字、一个词或是一句话就能点醒你。
-- 第三：学习感兴趣的技能
-    - 找到自己的热爱（技能）并且去学习实践到掌握不断进步实在是太重要了。真的，没有梦想，跟咸鱼有什么区别！梦想不是要多高大上，而是你有自己的追求。哪怕你是在寻找追求的路上，你也不会感叹时间太多，不知道干什么。
-- 第四：适当娱乐
-    - 陪自己的好基友出去打两把游戏，回味一下当年一起开黑的感觉，也可以加深感情，过过自己的游戏瘾。
-- 第五：陪重要的人
-    - 重要的人，比如家人，爱人，朋友等等。在什么地方付出时间就会在哪方面有回报。人的感情也是如此，陪父母聊天，做饭，有孩子的可以陪孩子学习，徒步，有女朋友的可以陪女朋友旅游，读书等。周围重要的人，感情经营好了，也为自己日后需要陪伴时打下了基础。
-- 怎样利用工作之余的时间
-    - 一切自有你自己决定，好好利用空闲时间，它能改变一个人，如果当你去浪费这段时间，你将会发现自己一无所获。
-
-
-
 ### 00.Day0-构建自我介绍
 - 我叫杨充，目前从事Android开发五年多时间，然后这期间负责了多个app组件化开发和抽离工作，同时还在公司内部做了一些功能组件的封装，提高业务开发效率。
 - 我平常喜欢写技术博客，是对技术总结或者看书的一种输出方式，持续更新4年多，同时利用业余时间不断完善GitHub封装库，公司内部也组织过多次技术分享。
@@ -441,8 +423,10 @@
 
 
 ### 30.Day30-没有生活热情
-- 每个阶段有每个阶段的困恼，摆脱了被动生存时间之后仍会有其他的烦恼，所以当阶段性的理想完成后，我们要去确认新的理想，并为之付诸努力，打造新一轮的精彩。
-
+- 背景介绍
+    - 每个阶段有每个阶段的困恼，摆脱了被动生存时间之后仍会有其他的烦恼。
+    - 所以当阶段性的理想完成后，我们要去确认新的理想，并为之付诸努力，打造新一轮的精彩。
+- 人不需要做很多事，专心做好一件事，会解释很多事。
 
 
 ### 31.Day31-什么好看时间
