--- a/Read/ReadShareWiki/04.其他精品/07.关于韭菜的修养.md
+++ b/Read/ReadShareWiki/04.其他精品/07.关于韭菜的修养.md
@@ -92,44 +92,11 @@
 
 
 ### 11.庞氏骗局的危害
-- 一旦你指出某个项目，某个平台，是庞氏骗局，总有人出来证明说，你说的不对，我知道很多人谁谁谁用这个平台，赚到钱了。**在庞氏骗局崩盘之前，一定是有人在中间有收益的，一定是有很多正面案例来吸纳下一波韭菜的**，否则这个骗局怎么能成立呢？
-- **然后就出现了这样一个“聪明”韭菜群体，他们明知道或者可能知道是割韭菜，是传销，是骗局，但是他们觉得，只要自己不是最后一棒，捞一笔就走**。这样的人现在其实越来越多，对整个消费环境的伤害也越来越大。**万一没有跑路成功，他们就会哭诉自己是受害者，找政府要说法，而他们却忽略被他们带进来的那些受害者，其实这样的人就是个缺德大傻逼**。
+- 一旦你指出某个项目，某个平台，是庞氏骗局，总有人出来证明说，你说的不对，我知道很多人谁谁谁用这个平台，赚到钱了。
+- **在庞氏骗局崩盘之前，一定是有人在中间有收益的，一定是有很多正面案例来吸纳下一波韭菜的**，否则这个骗局怎么能成立呢？
+- **然后就出现了这样一个“聪明”韭菜群体，他们明知道或者可能知道是割韭菜，是传销，是骗局，但是他们觉得，只要自己不是最后一棒，捞一笔就走**。
+- 这样的人现在其实越来越多，对整个消费环境的伤害也越来越大。**万一没有跑路成功，他们就会哭诉自己是受害者，找政府要说法，而他们却忽略被他们带进来的那些受害者，其实这样的人就是个缺德大傻逼**。
 - 其实有个想法，觉得类似传销骗局，金融骗局，出问题后，**不但要追究平台的责任，还要让每个受害者有权去追责自己上家，就是那个带你入门的上家，可能是亲戚，但有没有想过后果以及这个后果自己又是否能承担起**。只有上家被追责这个形成风气，才能根本上斩断这种割韭菜的市场空间。
-
-
-
-
-### 其他介绍
-#### 01.关于博客汇总链接
-- 1.技术博客汇总：https://www.jianshu.com/p/614cb839182c
-- 2.生活博客汇总：https://blog.csdn.net/m0_37700275/article/details/79832978
-
-
-
-#### 02.关于我的博客
-- github：https://github.com/yangchong211
-- 简书：http://www.jianshu.com/u/b7b2c6ed9284
-- csdn：http://my.csdn.net/m0_37700275
-- 喜马拉雅听书：http://www.ximalaya.com/zhubo/71989305/
-- 开源中国：https://my.oschina.net/zbj1618/blog
-- 邮箱：yangchong211@163.com
-- segmentfault头条：https://segmentfault.com/u/xiangjianyu/articles
-- 掘金：https://juejin.im/user/5939433efe88c2006afa0c6e
-- 博客园：https://www.cnblogs.com/yc211/
-- 腾讯云博客：https://cloud.tencent.com/developer/user/4302887
-- 51cto博客：https://blog.51cto.com/11359966
-
-
-
-#### 03.个人其他
-- 今日头条：https://www.toutiao.com/c/user/69380616341/#mid=1578618189107214
-- 新浪博客：http://blog.sina.com.cn/786041010yc
-- 网易lofter：http://yangchong211.lofter.com/
-- 简书：https://www.jianshu.com/u/ec34c1a84f75
-- 豆瓣：https://www.douban.com/people/79956976/notes
-- UC大鱼号：http://a.mp.uc.cn/media?mid=73fdf1411d2c49bcb96de3c0656fb807&from=xss&uc_param_str=frdnsnpfvecpntnwprdssskt&uc_biz_str=S:custom%7CC:iflow_ncmt
-- 腾讯：https://media.om.qq.com/author?id=MvVPLwMxS2oU5dFZrlQM8q0w0
-
 
 
 
