--- a/Read/ReadShareWiki/04.其他精品/04.自我成长备忘录.md
+++ b/Read/ReadShareWiki/04.其他精品/04.自我成长备忘录.md
@@ -38,8 +38,6 @@
 
 
 
-
-
 ### 03.关于沟通
 - 善于沟通。
     - 沟通高手善于在出现分歧时，抓住差异点，逐一攻破。
@@ -168,7 +166,8 @@
 
 
 ### 01.遇到的问题和困境
-- 在现在这个社会，总会有着一种学习焦虑感。比如，我们想利用业余的时间学习编程，学习写作，还想抽空学习摄影。那么想学的东西这么多，应该做出什么计划或者安排呢？当问出这个问题的时候，渴望别人给出一个具体的答案，而不是自己动脑去思考问题。
+- 在现在这个社会，总会有着一种学习焦虑感。比如，我们想利用业余的时间学习编程，学习写作，还想抽空学习摄影。
+- 那么想学的东西这么多，应该做出什么计划或者安排呢？当问出这个问题的时候，渴望别人给出一个具体的答案，而不是自己动脑去思考问题。
 - 这是一个特别常见的问题，经常会看到很多人问同样或类似的问题。总是渴望得到更多的东西，但是一旦说要坚持去行动的时候，却会常常想着有没有更快的方法去实现。你看，人就是一个巨大的矛盾体！
 
 
@@ -184,16 +183,6 @@
 
 
 ### 03.思考时间而非管理时间
-- 关于时间管理的书籍，市面上已经有许多呢！对于我们上班族来说，每个人的时间都是一天24小时，其实剩余自己可以自由支配的时间并不是很多，大概就是2到4个小时。如果合理安排这个时间，是十分重要。
-- 如果你因为一时激动，而定制4个小时的学习任务，那么你又可以坚持多久呢？只要时间一长，那么便会出现各种意外来干扰你的计划，虽然有的时候你的计划看起来是十分美好，可是那又怎样，没有结果的计划只能说是一张废纸。
-- 而当你有多个目标需要实现的时候，最重要的不是去怎么管理你的时间，而是去思考时间。
-- 完成每一项目标的真正动力是什么？这个目标是否是我想要的，我打算为实现这个目标付出多大的代价。要是我能达成这个目标会对我造成多大的改变和影响。
-
-
-### 04.愿意付出多少代价
-- 想要达到目标，就必须为此付出代价。那些好的方法和理论知识，如果你不去行动，不出付出，那么对于自己来说是无用的。
-- 考虑到达到目标，需要付出多少的时间和资源。分清事物的主次，分清事物的先后，分清事物的难易，这些都是十分必要的。努力奔跑总是需要时长看看前方的道路方向。
-- 虽然会很辛苦，有时也会有点寂寞，可是学习成长，锻炼身体本就不是件容易的事情。你现在所付出的时间和行动，都会在未来某一天回馈给你最美好的果实。
 
 
 
