--- a/Read/ReadShareWiki/02.生活博客/05.工作笔记大集合.md
+++ b/Read/ReadShareWiki/02.生活博客/05.工作笔记大集合.md
@@ -7,6 +7,7 @@
 - 06.远离低效的会议
 - 07.专注于基础知识
 - 08.思考非管理时间
+- 09.什么是所谓弯路
 
 
 ### 01.工作稳定的探讨
@@ -180,6 +181,25 @@
 
 
 
+### 09.什么是所谓弯路
+- 先来看一个场景
+    - 记得在读大学的时候，总是有学长对我们讲，选择大于努力。
+    - 接着便会有一些案例，讲述某某人选择了什么行业，通过自己的努力赚取了人生第一桶金；某某人如何快速成功；某某人如何创业拿到第一笔风险投资……
+- 思考什么选择才是正确的
+    - 至于什么样的选择才是正确的，这个是一个开放性的话题，很少有人能够给出具体的答案。
+    - 这个问题，本质上就是在问：“如何能付出最少的代价，从此平步青云。”或者如何复制别人的经验更快地走向成功？
+    - 但时至今日，这个时代风云变幻，此时的风口行业说不定下一刻就变成让你不能挣脱的漩涡。比如，直播，共享经济，人工智能，都曾无比辉煌过……
+- 多花点时间提升自己
+    - 年轻的时候，与其绞尽脑汁找捷径，不如花点时间提升自己的能力，这比什么都重要。
+    - 大都市的年轻人，或多或少都被“焦虑”和“痛苦”笼罩着。而痛苦的根源，大概可以用这个公式解释“人的痛苦程度=野心-能力”。
+    - 正如杨绛所说：“大多数人的问题都在于读书不多而想的太多。”年轻人的痛苦，绝大多数来源于野心勃勃，能力却跟不上。
+    - 每个人都在渴求快速成功，可是当能力还不够时，给你CEO的职位又如何？
+    - 直路，并不是没有任何荆棘的坦途，只是选对了适合自己的方向。而之后需要付出的心血和努力，一点都不会少。
+- 所谓正确的路都是回过头看待发现的
+    - 况且年轻时候的选择，本身没有什么对与错。通常都是在做出选择后所做的事，得到的回报，让你回过头来才觉得选的对。
+    - 这世上没有白走的弯路，每一步都算数。在不适合自己的道路上的那些经历，并不是在浪费时间。
+    - 那些血淋淋的教训，苦痛中积累的经验，都让你更加认清自己的局限，明白自己想要什么。
+    - 康庄大道，不好好走，也会穷途末路；反之，羊肠小道，也能遍地鲜花。
 
 
 
