--- a/Read/ReadShareWiki/02.生活博客/08.生活心得大集合.md
+++ b/Read/ReadShareWiki/02.生活博客/08.生活心得大集合.md
@@ -1,7 +1,7 @@
 #### 目录介绍
 - 01.赚钱也要赚时间
 - 02.如何看待搞副业
-- 03.
+- 03.发自内心想改变
 
 
 
@@ -51,4 +51,26 @@
 - 不要去不劳而获
     - 花一点钱，跟随别人投资，然后坐等分钱，有人问类似的项目靠不靠谱。特么的这么多赚钱的机会就缺你那点钱么，你想想还有什么是人家依仗你的。
     - 再说深一点，就算这个事情真成了，你出了点钱，项目赚钱了，你觉得干活的人会心甘情愿的给你按比例分钱么？你知道这事多考验人性么？
+
+
+### 03.发自内心想改变
+- 先来看一个场景
+    - 上大学的时候，室友总是调早上6点的闹钟，每次闹铃都把我闹醒，自己却还在呼呼大睡。记得那个时候雪哥闹钟是震耳欲聋……闹钟设置的音乐还是振奋人心的相信自己，我去，至今还是印象深刻。
+    - 这样的情况持续了三年，依然是那个晚睡晚起的人，我倒是被训练出来早起的习惯。很多人都像我这位室友，想要借助工具，帮助自己改掉缺点，培养技能。
+- 工具其实很难改变人
+    - 通过五花八门的方式，给自己套上枷锁，以此来约束自己。但大多数时候，这样的方式，都是三分钟热度，根本无法改变自己。
+    - 他们中的大多数，并不清楚本质上自己为什么要做出这样的改变。
+    - 懒惰是人的天性。单靠意志力是很难长期坚持一件事的，更何况去坚持一件你自己都说不上来有什么意义的事。
+- 先搞清楚改变的意义
+    - 所以，在想要改变自己某一方面之前，首先就要改变自己的思维模式。脑海中需要先想清楚，自己到底想要什么，是否对目前的人生模式感到满意。
+    - 如果对自己的生活状况不满意，那就改变最需要改变的部分。人的精力都是有限的，明确自己最需要做什么，怎么做可以带来最大收益，找准方向才去改变，有动机有目的有热情的改变才有可能实现。
+    - 确定了目标后，要学的第一课，就是先接受自己的缺点和不完美，因为你的那些睡懒觉玩手机的毛病是过去几年甚至十几年间养成的，不可能某天睁开眼，自己就成了一个完全不一样的人。
+    - 人短期内并不能适应巨大的变化，与其说是改变，不如说是改善。借助工具，可以让你瞬间跳出深井，却也可能随时再掉下去；而自己慢慢搭好梯子爬上来，才是从心念上真正成熟。
+
+
+
+
+
+
+
 
